// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Examples Build Snapshots basic_build should match output snapshot 1`] = `
{
  "index.html": 
"<!doctype html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Document</title>
  <script type="module" crossorigin src="./index.js"></script></head>
  <body>
    <h1>Clicks: 0</h1>
    <button>Tap</button>
    
  </body>
</html>
"
,
  "index.js": 
"var t=0,e=document.querySelector("button"),n=document.querySelector("h1");e.addEventListener("click",()=>{t++,n.textContent=\`Clicks: \${t}\`});
"
,
}
`;

exports[`Examples Build Snapshots with_assets should match output snapshot 1`] = `
{
  "index.html": 
"<!doctype html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Document</title>
  <script type="module" crossorigin src="./index.js"></script></head>
  <body>
    <img src="././profile.png" alt="tkeron profile picture" />
    <h1>Clicks: 0</h1>
    <button>Tap</button>
    
  </body>
</html>
"
,
  "index.js": 
"var t=0,e=document.querySelector("button"),n=document.querySelector("h1");e.addEventListener("click",()=>{t++,n.textContent=\`Clicks: \${t}\`});
"
,
  "section/index.html": 
"<!doctype html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Assets</title>
  <script type="module" crossorigin src="./index.js"></script></head>
  <body>
    <h1>Assets Example</h1>
    <img src="../profile.png" alt="Profile Picture" />
  </body>
</html>
"
,
  "section/index.js": "",
}
`;

exports[`Examples Build Snapshots with_pre should match output snapshot 1`] = `
{
  "contact.html": 
"<!DOCTYPE html>
<html lang="en"><head><meta charset="UTF-8"></meta><meta name="viewport" content="width=device-width, initial-scale=1.0"></meta><title>Document</title><script type="module" crossorigin src="./contact.js"></script></head><body><h1>Contact Us</h1></body></html>
"
,
  "contact.js": "",
  "index.html": 
"<!doctype html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Document</title>
  <script type="module" crossorigin src="./index.js"></script></head>
  <body>
    <img src="././profile.png" alt="tkeron profile picture" />
    <h1>Clicks: 0</h1>
    <button>Tap</button>
    
  </body>
</html>
"
,
  "index.js": 
"var t=0,e=document.querySelector("button"),n=document.querySelector("h1");e.addEventListener("click",()=>{t++,n.textContent=\`Clicks: \${t}\`});
"
,
  "section/index.html": 
"<!DOCTYPE html>
<html lang="en"><head><meta charset="UTF-8"></meta><meta name="viewport" content="width=device-width, initial-scale=1.0"></meta><title>Assets</title><script type="module" crossorigin src="./index.js"></script></head><body><h1>Assets Example</h1><img src="../profile.png" alt="Profile Picture"></img><h1>No linked asset</h1><img src="./no-linked-profile.png" alt="Profile Picture no linked" class="no-linked"></img></body></html>
"
,
  "section/index.js": "",
}
`;
